cls/journal: fixed possible infinite loop in expire_tags

Fixes: http://tracker.ceph.com/issues/21956
Signed-off-by: Jason Dillaman <dillaman@redhat.com>